# pyTecIO

./: LICENSE  README.md  read_tecplot.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: pytecio.yml
pytecio/: read_tecplot.py
tests/: test_read1D.py
