[metadata]
name = pyTecIO
author = Andreas Waldmann
author_email = mail@awaldmann.com
description= = Tecplot ASCII data reader
license = MIT license
include_package_data=True
keywords = tecplot
version = 0.2.0
url = https://github.com/awaldm/pyTecIO

[options.extras_require]
test = 
    pytest
    flake8

[options]
zip_safe = False
package_dir=
    =src
packages=find:
[options.packages.find]
where=src
